# UR_kinematics_calib

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  dry_parse.py  pyproject.toml  run_all_tests.py
.github/workflows/: ci.yml
configs/: calibration.conf  urcontrol.conf.UR5
cpp/quik_bind/: __init__.py  binding.cpp
data/: joint-eef-data.csv
docs/: PLAN.md
scripts/: basic_quik_demo.py  batch_fk_ik.py  benchmark_fk.py  benchmark_ik.py  binding_usage.py  fk_demo.py  fk_ik_check.py  ik_convergence_demo.py  ik_demo.py  round_trip_test.py
src/ur_kinematics_calib/: fk.py  ik.py  util.py
tests/: dry_parse.py  run_all_tests.py  test_fk.py  test_ik.py  test_util.py
