[project]
name = "ur-kinematics-calib"
version = "0.1.0"
description = "High-accuracy Python FK & IK solver for UR5 with calibrated DH parameters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.5",
    "rich>=14.0.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"