[project]
name = "ur-kinematics-calib"
version = "0.2.0"
description = "High-accuracy Python FK & IK solver for UR5 with calibrated DH parameters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.5",
    "rich>=14.0.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"